samples/_failures_safe/1761241886_457bae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9275785d.c: In function ‘main’:
./samples/SAFE/__tmp_9275785d.c:150:12: error: missing terminating " character
  150 |     printf("\nMatrix Operations
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9275785d.c:150:5: error: expected expression at end of input
  150 |     printf("\nMatrix Operations
      |     ^~~~~~
./samples/SAFE/__tmp_9275785d.c:150:5: error: expected declaration or statement at end of input
